--- a/myapp/static/css/header.css
+++ b/myapp/static/css/header.css
@@ -1,17 +1,19 @@
 .Search_input {
-  width: 100%;
+  width: 106%;
   max-width: 340px;
-  height: 41px;
+  height: 42px;
   padding: 12px;
   border-radius: 12px;
-  border: 1.5px solid lightgrey;
+  border: 1px solid black;
   outline: none;
   transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
   box-shadow: 0px 0px 20px -18px;
+  /* background-color: rgb(126, 124, 124); */
+  text-decoration-color: black;
 }
 
 .Search_input:hover {
-  border: 2px solid lightgrey;
+  border: 2.2px solid rgb(155, 153, 153);
   box-shadow: 0px 0px 20px -17px;
 }
 
@@ -54,3 +56,4 @@ ul li a {
 ul li a:hover {
   text-decoration: none; /* Ensures no underline on hover */
 }
+
