--- a/myapp/templates/cart.html
+++ b/myapp/templates/cart.html
@@ -58,22 +58,7 @@
   </header>  <!-- Off-Canvas Wrapper-->
   <div class="offcanvas-wrapper">
     <!-- Page Title-->
-    <div class="page-title">
-      <div class="container">
-        <div class="column">
-          <h1>Cart</h1>
-        </div>
-        <div class="column">
-          <ul class="breadcrumbs">
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-            <li class="separator">&nbsp;</li>
-            <li>Cart</li>
-          </ul>
-        </div>
-      </div>
-    </div>
+
     <!-- Page Content-->
     <div class="container padding-bottom-3x mb-1">
       <!-- Alert-->
@@ -90,27 +75,24 @@
               <th>Product Name</th>
               <th class="text-center">Quantity</th>
               <th class="text-center">Subtotal</th>
-              <th class="text-center">Discount</th>
               <th class="text-center">
                 <a class="btn btn-sm btn-outline-danger" href="#">Clear Cart</a>
               </th>
             </tr>
           </thead>
           <tbody>
+            <!--* Cart items  -->
+            {% for i in cart %}
             <tr>
               <td>
                 <div class="product-item">
                   <a class="product-thumb" href="shop-single.html">
-                    <img src="{% static 'img/shop/cart/01.jpg' %}" alt="Product">
+                    <img src="{{ i.product_image.url }}" alt="Product">
                   </a>
                   <div class="product-info">
                     <h4 class="product-title">
-                      <a href="shop-single.html">Unionbay Park</a>
+                      <a href="shop-single.html">{{ i.product_name }}</a>
                     </h4>
-                    <span>
-                      <em>Size:</em> 10.5</span>
-                    <span>
-                      <em>Color:</em> Dark Blue</span>
                   </div>
                 </div>
               </td>
@@ -125,86 +107,15 @@
                   </select>
                 </div>
               </td>
-              <td class="text-center text-lg text-medium">$43.90</td>
-              <td class="text-center text-lg text-medium">$18.00</td>
+              <td class="text-center text-lg text-medium">{{ i.product_price }}</td>
               <td class="text-center">
                 <a class="remove-from-cart" href="#" data-toggle="tooltip" title="Remove item">
                   <i class="icon-cross"></i>
                 </a>
               </td>
             </tr>
-            <tr>
-              <td>
-                <div class="product-item">
-                  <a class="product-thumb" href="shop-single.html">
-                    <img src="{% static 'img/shop/cart/02.jpg' %}" alt="Product">
-                  </a>
-                  <div class="product-info">
-                    <h4 class="product-title">
-                      <a href="shop-single.html">Daily Fabric Cap</a>
-                    </h4>
-                    <span>
-                      <em>Size:</em> XL</span>
-                    <span>
-                      <em>Color:</em> Black</span>
-                  </div>
-                </div>
-              </td>
-              <td class="text-center">
-                <div class="count-input">
-                  <select class="form-control">
-                    <option>1</option>
-                    <option selected>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
-                </div>
-              </td>
-              <td class="text-center text-lg text-medium">$24.89</td>
-              <td class="text-center">&mdash;</td>
-              <td class="text-center">
-                <a class="remove-from-cart" href="#" data-toggle="tooltip" title="Remove item">
-                  <i class="icon-cross"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="product-item">
-                  <a class="product-thumb" href="shop-single.html">
-                    <img src="{% static 'img/shop/cart/03.jpg' %}" alt="Product">
-                  </a>
-                  <div class="product-info">
-                    <h4 class="product-title">
-                      <a href="shop-single.html">Cole Haan Crossbody</a>
-                    </h4>
-                    <span>
-                      <em>Size:</em> -</span>
-                    <span>
-                      <em>Color:</em> Turquoise</span>
-                  </div>
-                </div>
-              </td>
-              <td class="text-center">
-                <div class="count-input">
-                  <select class="form-control">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
-                </div>
-              </td>
-              <td class="text-center text-lg text-medium">$200.00</td>
-              <td class="text-center">&mdash;</td>
-              <td class="text-center">
-                <a class="remove-from-cart" href="#" data-toggle="tooltip" title="Remove item">
-                  <i class="icon-cross"></i>
-                </a>
-              </td>
-            </tr>
+            {% endfor %}
+            <!--* Cart End  -->
           </tbody>
         </table>
       </div>
@@ -215,9 +126,7 @@
             <button class="btn btn-outline-primary btn-sm" type="submit">Apply Coupon</button>
           </form>
         </div>
-        <div class="column text-lg">Subtotal:
-          <span class="text-medium">$289.68</span>
-        </div>
+        <h2>Total:100</h2>
       </div>
       <div class="shopping-cart-footer">
         <div class="column">
@@ -232,9 +141,7 @@
       </div>
       <!-- Related Products Carousel-->
       <h3 class="text-center padding-top-2x mt-2 padding-bottom-1x">You May Also Like</h3>
-      <!-- Carousel-->
       <div class="owl-carousel" data-owl-carousel="{ &quot;nav&quot;: false, &quot;dots&quot;: true, &quot;margin&quot;: 30, &quot;responsive&quot;: {&quot;0&quot;:{&quot;items&quot;:1},&quot;576&quot;:{&quot;items&quot;:2},&quot;768&quot;:{&quot;items&quot;:3},&quot;991&quot;:{&quot;items&quot;:4},&quot;1200&quot;:{&quot;items&quot;:4}} }">
-        <!-- Product-->
         <div class="grid-item">
           <div class="product-card">
             <div class="product-badge text-danger">22% Off</div>
