login & Register page complete

--- a/myapp/templates/cart.html
+++ b/myapp/templates/cart.html
@@ -51,7 +51,7 @@
                 <li><a class="dropdown-item" href="account-profile.html">👤 Account</a></li>
                 <li><a class="dropdown-item" href="{% url 'cart' %}">🛒 Cart</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item text-danger" href="{% url 'account' %}">🔒 Logout</a></li>
+                <li><a class="dropdown-item text-danger" href="{% url 'logout' %}">🔒 Logout</a></li>
             </ul>
         </div>
     </div>
