--- a/myapp/templates/shop-grid-ls.html
+++ b/myapp/templates/shop-grid-ls.html
@@ -105,8 +105,8 @@
     #footer_mail:active{
       border: 1px solid white;
     }
+    /* From Uiverse.io by NorthFishHasNa */ 
 </style>
-
 <!--* Body-->
 <body>
   <!--! Header  -->
@@ -163,51 +163,72 @@
             <div class="gutter-sizer"></div>
             <div class="grid-sizer"></div>
             {% for p in pid %}
-              <div class="grid-item">
-                <div class="product-card" style="border: 1.8px solid #000;">
-                  <a class="product-thumb" href="shop-single.html">
-                    <img src="{{ p.product_image.url }}" alt="Product">
-                  </a>
-                  <br>
-                  <h3 class="product-title">
-                    <a href="shop-single.html"><b>{{ p.product_name }}</b></a>
-                  </h3>
-                  <h4 class="product-price">
-                    <span><b>₹{{ p.product_price }}</b></span>
-                  </h4>
-                    <span>
-                      <!--* Wishlist  -->
-                    <form action="{% url 'wishlist' p.id %}" method="post">
-                      {% csrf_token %}
-                      <button id="wishlist_btn" title="Wishlist">
-                          {% if p.id in wishlist %}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="320" fill="red" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                              <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
-                            </svg>
-                            {% else %}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="320" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                              <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                            </svg>
-                          {% endif %}
-                      </button>
+            <div class="grid-item">
+                <div class="product-card" style="border: 1.8px solid #000; padding: 10px; text-align: center;">
+        
+                    <!-- ✅ Product Detail Form -->
+                    <form action="{% url 'shop_single' product_id=p.id %}" method="get">
+                        <button type="submit" style="background: none; border: none; padding: 0; margin: 0;">
+                            <img src="{{ p.product_image.url }}" alt="Product" style="width: 100%; height: auto;">
+                        </button>
                     </form>
+        
                     <br>
-                  </span>
-                  <form action="{% url 'cart' p.id %}" method="post">
-                    {% csrf_token %}
-                      <button id="added_cart_btn">
-                        {% if p.id in cart_item %}
-                        <span id="added_cart_span"><img src="static/img/shopping-cart.png" id="added_cart_img"  alt="Add to cart">
-                          <h6 class="added_cart_text"><b>Added to cart </b></h6></span>
-                        {% else %}
-                        <span id="add_cart_span"><img src="static/img/addcart.png" id="add_cart_img"  alt="Add to cart">
-                          <h6 class="add_cart_text"><b>Add to cart</b></h6></span>
-                        {% endif %}
-                      </button>
-                  </form>
+        
+                    <!-- ✅ Product Title in Form -->
+                    <form action="{% url 'shop_single' product_id=p.id %}" method="get">
+                        <button type="submit" style="background: none; border: none; padding: 0; margin: 0; font-size: 18px; color: black;">
+                            <b>{{ p.product_name }}</b>
+                        </button>
+                    </form>
+        
+                    <!-- ✅ Product Price -->
+                    <h4 class="product-price"><b>₹{{ p.product_price }}</b></h4>
+        
+                    <!-- ✅ Action Buttons -->
+                    <div class="d-flex align-items-center justify-content-center gap-3">
+        
+                        <!-- Wishlist Button -->
+                        <form action="{% url 'wishlist' p.id %}" method="post">
+                            {% csrf_token %}
+                            <button id="wishlist_btn" title="Wishlist" style="background: none; border: none;">
+                                {% if p.id in wishlist %}
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="red" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                                    </svg>
+                                {% else %}
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                                    </svg>
+                                {% endif %}
+                            </button>
+                        </form>
+        
+                        <!-- Add to Cart Button -->
+                        <form action="{% url 'cart' p.id %}" method="post">
+                            {% csrf_token %}
+                            <button id="added_cart_btn" style="background: none; border: none;">
+                                {% if p.id in cart_item %}
+                                    <img src="{% static 'img/shopping-cart.png' %}" width="25" height="25" alt="Added to Cart">
+                                {% else %}
+                                    <img src="{% static 'img/addcart.png' %}" width="25" height="25" alt="Add to Cart">
+                                {% endif %}
+                            </button>
+                        </form>
+        
+                        <!-- ✅ Product Detail Icon -->
+                        <form action="{% url 'shop_single' p.id %}" method="post">
+                          {% csrf_token %}
+                            <button type="submit" title="View Details" style="background: none; border: none;">
+                                <i class="bi bi-image-fill" style="font-size: 25px; color: black;"></i>
+                            </button>
+                        </form>
+        
+                    </div>
                 </div>
-              </div>
-            {% endfor %}
+            </div>
+        {% endfor %}
+        
           </div>
         </div>
         <div class="col-xl-3 col-lg-4 order-lg-1">
@@ -278,10 +299,7 @@
                 {% for i in sfid %}
                 <div>
                   <input type="checkbox" name="size_{{ i.size }}" value="{{ i.size }}">
-                  
                   {{ i.size }} 
-                  
-                  
                 </div>
                 {% endfor %}
                 <button class="btn btn-outline-primary btn-sm" type="submit">Filter</button>
@@ -383,7 +401,6 @@
                 </svg>
                   <input type="email" id="footer_mail" aria-describedby="emailHelp" placeholder="Email address">
               </div>
-              <!-- <span class="form-text text-sm text-white opacity-50">Subscribe to our Newsletter to receive early discount offers, latest news, sales and promo information.</span> -->
             </form>
           </div>
         </div>
